--- a/index.html
+++ b/index.html
@@ -1,1 +1,31 @@
 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Raw Artisan - Ian Barrett Photography</title>
+  <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+  <header>
+    <nav>
+      <ul>
+        <li><a href="index.html">Raw Artisan</a></li>
+        <li><a href="gallery.html">Gallery</a></li>
+        <li><a href="contact.html">Contact</a></li>
+      </ul>
+    </nav>
+  </header>
+  <main>
+    <section class="hero">
+      <h1>Raw Artisan</h1>
+      <p>Photographer: Ian Barrett</p>
+      <p class="tagline">Dramatic artisan also be Bold</p>
+    </section>
+  </main>
+  <footer>
+    <p>&copy; 2025 Raw Artisan. All rights reserved.</p>
+  </footer>
+  <script src="script.js"></script>
+</body>
+</html>
