--- a/gallery.html
+++ b/gallery.html
@@ -15,23 +15,42 @@
       </ul>
     </nav>
   </header>
+  
   <main>
     <h1>Gallery</h1>
-    <div class="gallery-grid">
-      <img src="images/shot1.jpg" alt="Scenic Photo 1 by Ian Barrett" class="gallery-item">
-      <img src="images/shot2.jpg" alt="Scenic Photo 2 by Ian Barrett" class="gallery-item">
-      <img src="images/shot3.jpg" alt="Scenic Photo 3 by Ian Barrett" class="gallery-item">
-      <!-- Add more images as needed -->
-    </div>
-    <!-- Modal for enlarged image view -->
+
+    <!-- Celebrity Portrait Section -->
+    <section>
+      <h2>Celebrity Portrait</h2>
+      <div class="gallery-grid">
+        <img src="images/celebrity portrait/portrait1.jpg" alt="Celebrity Portrait 1" class="gallery-item">
+        <img src="images/celebrity portrait/portrait2.jpg" alt="Celebrity Portrait 2" class="gallery-item">
+        <img src="images/celebrity portrait/portrait3.jpg" alt="Celebrity Portrait 3" class="gallery-item">
+      </div>
+    </section>
+
+    <!-- Photo Journalism Section -->
+    <section>
+      <h2>Photo Journalism</h2>
+      <div class="gallery-grid">
+        <img src="images/photo journalism/photo1.jpg" alt="Photo Journalism 1" class="gallery-item">
+        <img src="images/photo journalism/photo2.jpg" alt="Photo Journalism 2" class="gallery-item">
+        <img src="images/photo journalism/photo3.jpg" alt="Photo Journalism 3" class="gallery-item">
+      </div>
+    </section>
+
+    <!-- Modal for Enlarged Images -->
     <div id="modal" class="modal">
       <span id="close" class="close">&times;</span>
       <img id="modal-img" class="modal-content" alt="Enlarged Photo">
     </div>
+
   </main>
+
   <footer>
     <p>&copy; 2025 Raw Artisan. All rights reserved.</p>
   </footer>
+
   <script src="script.js"></script>
 </body>
 </html>
