--- a/gallery.html
+++ b/gallery.html
@@ -23,9 +23,9 @@
     <section>
       <h2>Celebrity Portrait</h2>
       <div class="gallery-grid">
-        <img src="images/celebrity portrait/portrait1.jpg" alt="Celebrity Portrait 1" class="gallery-item">
-        <img src="images/celebrity portrait/portrait2.jpg" alt="Celebrity Portrait 2" class="gallery-item">
-        <img src="images/celebrity portrait/portrait3.jpg" alt="Celebrity Portrait 3" class="gallery-item">
+        <img src="images/celebrity-portrait/portrait1.jpg" alt="Celebrity Portrait 1" class="gallery-item">
+        <img src="images/celebrity-portrait/portrait2.jpg" alt="Celebrity Portrait 2" class="gallery-item">
+        <img src="images/celebrity-portrait/portrait3.jpg" alt="Celebrity Portrait 3" class="gallery-item">
       </div>
     </section>
 
@@ -33,9 +33,9 @@
     <section>
       <h2>Photo Journalism</h2>
       <div class="gallery-grid">
-        <img src="images/photo journalism/photo1.jpg" alt="Photo Journalism 1" class="gallery-item">
-        <img src="images/photo journalism/photo2.jpg" alt="Photo Journalism 2" class="gallery-item">
-        <img src="images/photo journalism/photo3.jpg" alt="Photo Journalism 3" class="gallery-item">
+        <img src="images/photo-journalism/photo1.jpg" alt="Photo Journalism 1" class="gallery-item">
+        <img src="images/photo-journalism/photo2.jpg" alt="Photo Journalism 2" class="gallery-item">
+        <img src="images/photo-journalism/photo3.jpg" alt="Photo Journalism 3" class="gallery-item">
       </div>
     </section>
 
