--- a/gallery.html
+++ b/gallery.html
@@ -19,13 +19,29 @@
   <main>
     <h1>Gallery</h1>
 
+    <!-- General Images Section -->
+    <section>
+      <h2>General Photography</h2>
+      <div class="gallery-grid">
+        <img src="images/IMG-20250326-WA0005.jpg" alt="General Image 1" class="gallery-item">
+        <img src="images/IMG-20250326-WA0009.jpg" alt="General Image 2" class="gallery-item">
+        <img src="images/IMG-20250326-WA0011.jpg" alt="General Image 3" class="gallery-item">
+        <img src="images/IMG-20250326-WA0012.jpg" alt="General Image 4" class="gallery-item">
+        <img src="images/IMG-20250326-WA0014.jpg" alt="General Image 5" class="gallery-item">
+        <img src="images/IMG-20250326-WA0015.jpg" alt="General Image 6" class="gallery-item">
+        <img src="images/IMG-20250326-WA0017.jpg" alt="General Image 7" class="gallery-item">
+        <img src="images/IMG-20250326-WA0018.jpg" alt="General Image 8" class="gallery-item">
+      </div>
+    </section>
+
     <!-- Celebrity Portrait Section -->
     <section>
       <h2>Celebrity Portrait</h2>
       <div class="gallery-grid">
-        <img src="images/celebrity-portrait/portrait1.jpg" alt="Celebrity Portrait 1" class="gallery-item">
-        <img src="images/celebrity-portrait/portrait2.jpg" alt="Celebrity Portrait 2" class="gallery-item">
-        <img src="images/celebrity-portrait/portrait3.jpg" alt="Celebrity Portrait 3" class="gallery-item">
+        <img src="images/celebrity-portrait/IMG-20250326-WA0004.jpg" alt="Celebrity Portrait 1" class="gallery-item">
+        <img src="images/celebrity-portrait/IMG-20250326-WA0007.jpg" alt="Celebrity Portrait 2" class="gallery-item">
+        <img src="images/celebrity-portrait/IMG-20250326-WA0008.jpg" alt="Celebrity Portrait 3" class="gallery-item">
+        <img src="images/celebrity-portrait/IMG-20250326-WA0010.jpg" alt="Celebrity Portrait 4" class="gallery-item">
       </div>
     </section>
 
@@ -33,9 +49,10 @@
     <section>
       <h2>Photo Journalism</h2>
       <div class="gallery-grid">
-        <img src="images/photo-journalism/photo1.jpg" alt="Photo Journalism 1" class="gallery-item">
-        <img src="images/photo-journalism/photo2.jpg" alt="Photo Journalism 2" class="gallery-item">
-        <img src="images/photo-journalism/photo3.jpg" alt="Photo Journalism 3" class="gallery-item">
+        <img src="images/photo%20journalism/IMG-20250326-WA0002.jpg" alt="Photo Journalism 1" class="gallery-item">
+        <img src="images/photo%20journalism/IMG-20250326-WA0003.jpg" alt="Photo Journalism 2" class="gallery-item">
+        <img src="images/photo%20journalism/IMG-20250326-WA0004.jpg" alt="Photo Journalism 3" class="gallery-item">
+        <img src="images/photo%20journalism/IMG-20250326-WA0005.jpg" alt="Photo Journalism 4" class="gallery-item">
       </div>
     </section>
 
@@ -54,3 +71,4 @@
   <script src="script.js"></script>
 </body>
 </html>
+
