--- a/index.html
+++ b/index.html
@@ -1,31 +1,101 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Raw Artisan - Ian Barrett Photography</title>
-  <link rel="stylesheet" href="styles.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Raw Artisan</title>
+    <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <link rel="stylesheet" href="css/styles.css"> <!-- Link to custom CSS file -->
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&family=Roboto:wght@300;400;500&display=swap');
+        body {
+            font-family: 'Roboto', sans-serif;
+        }
+        .hero-title {
+            font-family: 'Playfair Display', serif;
+        }
+    </style>
 </head>
-<body>
-  <header>
-    <nav>
-      <ul>
-        <li><a href="index.html">Raw Artisan</a></li>
-        <li><a href="gallery.html">Gallery</a></li>
-        <li><a href="contact.html">Contact</a></li>
-      </ul>
+<body class="bg-gray-50">
+    <!-- Navigation -->
+    <nav class="bg-white shadow-sm py-4 px-6 flex justify-between items-center">
+        <div class="text-xl font-bold">RAW ARTISAN</div>
+        <div class="hidden md:flex space-x-6">
+            <a href="#" class="hover:text-gray-600">Artworks</a>
+            <a href="#" class="hover:text-gray-600">Artists</a>
+            <a href="#" class="hover:text-gray-600">About</a>
+            <a href="#" class="hover:text-gray-600">Contact</a>
+        </div>
+        <div class="flex items-center space-x-4">
+            <a href="#"><i class="fas fa-search"></i></a>
+            <a href="#"><i class="fas fa-user"></i></a>
+            <a href="#"><i class="fas fa-shopping-cart"></i></a>
+        </div>
     </nav>
-  </header>
-  <main>
-    <section class="hero">
-      <h1>Raw Artisan</h1>
-      <p>Photographer: Ian Barrett</p>
-      <p class="tagline">Dramatic artisan also be Bold</p>
+
+    <!-- Hero Section -->
+    <section class="relative h-96 bg-gray-200 flex items-center justify-center">
+        <div class="text-center px-4">
+            <h1 class="hero-title text-4xl md:text-5xl font-bold mb-4">Discover Original Art</h1>
+            <p class="text-lg mb-6">Handpicked selection of contemporary artworks</p>
+            <button class="bg-black text-white px-6 py-2 rounded hover:bg-gray-800 transition">Browse Collection</button>
+        </div>
     </section>
-  </main>
-  <footer>
-    <p>&copy; 2025 Raw Artisan. All rights reserved.</p>
-  </footer>
-  <script src="script.js"></script>
+
+    <!-- Featured Artworks -->
+    <section class="py-12 px-6 max-w-7xl mx-auto">
+        <h2 class="text-2xl font-bold mb-8">Featured Artworks</h2>
+        <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-6">
+            <!-- Artwork cards -->
+            <div class="bg-white rounded shadow-sm overflow-hidden">
+                <img src="images/artwork1.jpg" alt="Artwork 1" class="h-64 w-full object-cover"> <!-- Image added -->
+                <div class="p-4">
+                    <h3 class="font-medium">Artwork Title</h3>
+                    <p class="text-gray-600 text-sm">Artist Name</p>
+                    <p class="font-bold mt-2">$1,200</p>
+                </div>
+            </div>
+            <!-- Repeat similar cards for other artworks -->
+        </div>
+    </section>
+
+    <!-- Footer -->
+    <footer class="bg-gray-100 py-8 px-6">
+        <div class="max-w-7xl mx-auto grid grid-cols-1 md:grid-cols-4 gap-8">
+            <div>
+                <h3 class="font-bold mb-4">RAW ARTISAN</h3>
+                <p class="text-sm text-gray-600">Discover and collect exceptional art from independent artists.</p>
+            </div>
+            <div>
+                <h4 class="font-medium mb-4">Explore</h4>
+                <ul class="space-y-2 text-sm">
+                    <li><a href="#" class="text-gray-600 hover:text-black">Artworks</a></li>
+                    <li><a href="#" class="text-gray-600 hover:text-black">Artists</a></li>
+                    <li><a href="#" class="text-gray-600 hover:text-black">Collections</a></li>
+                </ul>
+            </div>
+            <div>
+                <h4 class="font-medium mb-4">About</h4>
+                <ul class="space-y-2 text-sm">
+                    <li><a href="#" class="text-gray-600 hover:text-black">Our Story</a></li>
+                    <li><a href="#" class="text-gray-600 hover:text-black">Blog</a></li>
+                    <li><a href="#" class="text-gray-600 hover:text-black">Careers</a></li>
+                </ul>
+            </div>
+            <div>
+                <h4 class="font-medium mb-4">Connect</h4>
+                <div class="flex space-x-4">
+                    <a href="#"><i class="fab fa-instagram"></i></a>
+                    <a href="#"><i class="fab fa-facebook-f"></i></a>
+                    <a href="#"><i class="fab fa-twitter"></i></a>
+                    <a href="#"><i class="fab fa-pinterest"></i></a>
+                </div>
+            </div>
+        </div>
+    </footer>
+
+    <script src="js/script.js"></script> <!-- Link to custom JS file -->
 </body>
 </html>
+
