--- a/contact.html
+++ b/contact.html
@@ -1,38 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Contact - Raw Artisan</title>
-  <link rel="stylesheet" href="styles.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Contact - Raw Artizan</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <header>
+
     <nav>
-      <ul>
-        <li><a href="index.html">Raw Artisan</a></li>
-        <li><a href="gallery.html">Gallery</a></li>
-        <li><a href="contact.html">Contact</a></li>
-      </ul>
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="gallery.html">Gallery</a></li>
+            <li><a href="contact.html">Contact</a></li>
+        </ul>
     </nav>
-  </header>
-  <main>
-    <h1>Contact Raw Artisan</h1>
-    <form id="contactForm" action="submit_form" method="post">
-      <label for="name">Name:</label>
-      <input type="text" id="name" name="name" required>
-  
-      <label for="email">Email:</label>
-      <input type="email" id="email" name="email" required>
-  
-      <label for="message">Message:</label>
-      <textarea id="message" name="message" required></textarea>
-  
-      <button type="submit">Send Message</button>
-    </form>
-  </main>
-  <footer>
-    <p>&copy; 2025 Raw Artisan. All rights reserved.</p>
-  </footer>
-  <script src="script.js"></script>
+
+    <main>
+        <h1>Contact Us</h1>
+        <form action="submit_form.php" method="post">
+            <label for="name">Name:</label>
+            <input type="text" id="name" name="name" required>
+
+            <label for="email">Email:</label>
+            <input type="email" id="email" name="email" required>
+
+            <label for="message">Message:</label>
+            <textarea id="message" name="message" required></textarea>
+
+            <button type="submit">Send</button>
+        </form>
+    </main>
+
+    <footer>
+        <p>&copy; 2025 Raw Artizan. All rights reserved.</p>
+    </footer>
+
 </body>
 </html>
