--- a/gallery.html
+++ b/gallery.html
@@ -14,10 +14,18 @@
             <li><a href="gallery.html">Gallery</a></li>
             <li><a href="contact.html">Contact</a></li>
         </ul>
+        <!-- Logo at top right -->
+        <div class="logo">
+            <a href="index.html">
+                <img src="images/IMG-20250326-WA0016.jpg" alt="Raw Artizan Logo">
+            </a>
+        </div>
     </nav>
 
     <main>
         <h1>Gallery</h1>
+        <p class="gallery-description">Explore the captivating works of Raw Artizan, covering Celebrity Portraits and Photo Journalism.</p>
+
         <div class="gallery-buttons">
             <button onclick="loadGallery('celebrity-photo')">Celebrity Photo</button>
             <button onclick="loadGallery('photo-journalism')">Photo Journalism</button>
