--- a/index.html
+++ b/index.html
@@ -15,6 +15,12 @@
             <li><a href="gallery.html">Gallery</a></li>
             <li><a href="contact.html">Contact</a></li>
         </ul>
+        <!-- Logo at top right -->
+        <div class="logo">
+            <a href="index.html">
+                <img src="images/IMG-20250326-WA0016.jpg" alt="Raw Artizan Logo">
+            </a>
+        </div>
     </nav>
 
     <!-- Hero Section with Background -->
@@ -26,25 +32,25 @@
     <!-- Artist Statement -->
     <section class="content-section">
         <h2>Artist Statement</h2>
-        <p>Covers portraits, photojournalism, and abstract photos. His photojournalism looks at modern political standpoints in history...</p>
+        <p>Covers portraits, photojournalism, and abstract photos. His photojournalism looks at modern political standpoints in history, such as Covid-19 and 9/11...</p>
     </section>
 
     <!-- Biography -->
     <section class="content-section">
         <h2>Biography</h2>
-        <p>Raw Artizan is a modern artist and photographer based in Central London...</p>
+        <p>Raw Artizan is a modern artist and photographer based in Central London. He graduated from Nescot College of Technology with a degree in photography...</p>
     </section>
 
     <!-- Abstract -->
     <section class="content-section">
         <h2>Abstract</h2>
-        <p>Raw Artizan looks at natural and organic shapes, patterns, and colors...</p>
+        <p>Raw Artizan looks at natural and organic shapes, patterns, and colors. He has a very acute eye for detail, dramatic composition, and vivid colors...</p>
     </section>
 
     <!-- Inspirations -->
     <section class="content-section">
         <h2>Inspiration & Influences</h2>
-        <p>Growing up in urban West London in the 90s, Raw Artizan was inspired by his community...</p>
+        <p>Growing up in urban West London in the 90s, Raw Artizan was inspired by his community, including influences like Andy Warhol, Banksy, Bob Marley...</p>
     </section>
 
     <!-- Footer -->
