--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Raw Artizan - Home</title>
     <link rel="stylesheet" href="styles.css">
+    <script defer src="script.js"></script>
 </head>
 <body>
 
@@ -15,11 +16,8 @@
             <li><a href="gallery.html">Gallery</a></li>
             <li><a href="contact.html">Contact</a></li>
         </ul>
-        <!-- Logo at top right -->
-        <div class="logo">
-            <a href="index.html">
-                <img src="images/IMG-20250326-WA0016.jpg" alt="Raw Artizan Logo">
-            </a>
+        <div class="logo-container">
+            <img src="images/IMG-20250326-WA0016.jpg" alt="Raw Artizan Logo" class="logo">
         </div>
     </nav>
 
@@ -32,31 +30,60 @@
     <!-- Artist Statement -->
     <section class="content-section">
         <h2>Artist Statement</h2>
-        <p>Covers portraits, photojournalism, and abstract photos. His photojournalism looks at modern political standpoints in history, such as Covid-19 and 9/11...</p>
+        <p>
+            Covers portraits, photojournalism, and abstract photos. His photojournalism looks at modern 
+            political standpoints in history, such as Covid-19 and 9/11. This work captures the faces of the 
+            masses during volatile demonstrations in the name of freedom of expression. His work is socially 
+            relevant, modern, and impactful—provoking thought, intent, and realization of self-expression.
+        </p>
     </section>
 
     <!-- Biography -->
     <section class="content-section">
         <h2>Biography</h2>
-        <p>Raw Artizan is a modern artist and photographer based in Central London. He graduated from Nescot College of Technology with a degree in photography...</p>
+        <p>
+            Raw Artizan is a modern artist and photographer based in Central London. 
+            He graduated from Nescot College of Technology with a degree in photography 
+            and briefly studied Fashion Promotion and Imaging at UCA in Epsom in 2014.
+        </p>
     </section>
 
     <!-- Abstract -->
     <section class="content-section">
         <h2>Abstract</h2>
-        <p>Raw Artizan looks at natural and organic shapes, patterns, and colors. He has a very acute eye for detail, dramatic composition, and vivid colors...</p>
+        <p>
+            Raw Artizan explores natural and organic shapes, patterns, and colors. 
+            His keen eye for dramatic, unorthodox compositions and vivid colors 
+            is inspired by the unseen beauty of nature and his deep love for the earth.
+        </p>
     </section>
 
     <!-- Inspirations -->
     <section class="content-section">
         <h2>Inspiration & Influences</h2>
-        <p>Growing up in urban West London in the 90s, Raw Artizan was inspired by his community, including influences like Andy Warhol, Banksy, Bob Marley...</p>
+        <p>
+            Growing up in urban West London in the 90s, Raw Artizan was inspired by his community. 
+            His influences include Andy Warhol (including his collaboration with Basquiat), 
+            Picasso, David Bowie, Esther Anderson, Rankin, Banksy, Bob Marley, and the Hip Hop genre.
+        </p>
+    </section>
+
+    <!-- Featured Works (Home Page Images) -->
+    <section id="home-featured" class="featured-images">
+        <h2>Featured Works</h2>
+        <!-- Images will be dynamically loaded by script.js -->
     </section>
 
     <!-- Footer -->
     <footer>
         <p>&copy; 2025 Raw Artizan. All rights reserved.</p>
     </footer>
+
+    <!-- Modal for Enlarged Images -->
+    <div id="modal" class="modal">
+        <span id="close" class="close">&times;</span>
+        <img id="modal-img" class="modal-content">
+    </div>
 
 </body>
 </html>
